# zero-lock

./: Cargo.toml  Justfile  README.md
src/: locker.rs  main.rs
