[package]
name = "zero-lock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.3"
pwd = "1.4.0"
libcosmic = { workspace = true, features = ["tokio", "wayland"] }
chrono = "0.4.37"
wayland-client = "0.31.2"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["time"] }

[workspace.dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
